added reg day welfare pack post

--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -32,11 +32,11 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "directions.png"
+		                "name": "contact-bg.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "contact-bg.jpg"
+		                "name": "directions.png"
 		            },
 		            {
 		                "type": "file",
@@ -48,11 +48,7 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "_events-bg.jpg"
-		            },
-		            {
-		                "type": "file",
-		                "name": "regday-group.jpg"
+		                "name": "index-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -60,7 +56,11 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "index-bg.jpg"
+		                "name": "regday-group.jpg"
+		            },
+		            {
+		                "type": "file",
+		                "name": "_events-bg.jpg"
 		            }
 		        ]
 		    },
@@ -88,11 +88,11 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "group.jpg"
+		                        "name": "Crystal.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Crystal.png"
+		                        "name": "group.jpg"
 		                    },
 		                    {
 		                        "type": "file",
@@ -100,7 +100,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Ivan.png"
+		                        "name": "Miriam.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -108,7 +108,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Miriam.png"
+		                        "name": "Ivan.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -117,6 +117,28 @@
 		                    {
 		                        "type": "file",
 		                        "name": "Victoria.png"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "2-reg-day",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "cover.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "info1.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "info2.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "info3.jpeg"
 		                    }
 		                ]
 		            }
