--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -31,6 +31,34 @@
                 ],
             },
             {
+                link: "post-reg-day",
+                subtitle: "Registration day is coming!",
+                title: "Registration Day",
+                date: "August 11, 2021",
+                eventDate: "15 Aug",
+                imgDir: "2-reg-day",
+                content: [
+                    "【𝐇𝐊𝐔 𝐑𝐞𝐠𝐢𝐬𝐭𝐫𝐚𝐭𝐢𝐨𝐧 𝐃𝐚𝐲】ʕ•ᴥ•ʔ",
+                    "𝗗𝗮𝘁𝗲: 𝟭𝟱/𝟴 - 𝟭𝟳/𝟴",
+                    "𝗩𝗲𝗻𝘂𝗲: 𝗨𝗻𝗶𝘃𝗲𝗿𝘀𝗶𝘁𝘆 𝗕𝗼𝗼𝗸𝘀𝘁𝗼𝗿𝗲",
+                    "",
+                    "一年一度嘅reg day又嚟喇！🌈🔥 Art Club 每年都會有welfare pack 🎁送返我哋members😝🤤 大家可以swipe去後面睇welfare products😙",
+                    "另外今年我地仲有幸得到唔同公司嘅贊助😋🤤🙆‍♀️想攞走呢個咁靚嘅welfare pack？",
+                    "🤩🤤😍 記住嚟我哋個booth到 reg member 啊🙆‍♀️😎🥳 （🤫～到時仲有神秘禮物添😗😉）到時見！～ (´꒳`)",
+                    "",
+                    "Registration day is coming! 🤩🌈 Every year, new members receive a welfare pack 🎁😍 Swipe to the next few pages to take a peek at the welfare products 😉 ",
+                    "Also, a big thanks to the companies who have sponsored us! 😋🤩 Want a free welfare pack? ",
+                    "Don't miss our booth and come register for Art Club membership! 🤤 (p.s. more secret goodies may just be waiting for you! 🤫) Hope to see you there~ 🙆‍♀️❤🧡💛💚💙💜",
+                    "",
+                    "最後鳴謝（排名不分先後）",
+                    "可以like and follow 埋佢哋😬🤩🤓🙆🏻‍♀️🙆🏻‍♀️🙆🏻‍♀️：",
+                    "@calbeehongkong",
+                    "@ryukakusan_official",
+                    "@freeland__",
+                    "@september_9s",
+                ],
+            },
+            {
                 link: "post-iridescence",
                 title: "Art Club Iridescence",
                 subtitle: "Meet the 2021-2022 Session Committee Members",
