--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -7,7 +7,7 @@
                 date: "August 5, 2021",
                 eventDate: "2 Sep",
                 imgDir: "1-art-jam-thursday",
-                poster: "poster.png",
+                poster: "1-poster.png",
                 content: [
                     "成日留喺屋企唔知道可以做啲乜嘢？除咗打機、煲劇、讀書之外，已經唔知道可以做啲乜？唔緊要！Art Club 幫到你！！",
                     "嚟緊我哋藝術學會將會逢星期四舉行Art Jam Thursday！會員可以利用學會提供一系列嘅畫具同埋美術用品",
@@ -37,16 +37,35 @@
                 date: "August 11, 2021",
                 eventDate: "15 Aug",
                 imgDir: "2-reg-day",
+                poster: "2-vid.gif",
                 content: [
                     "【𝐇𝐊𝐔 𝐑𝐞𝐠𝐢𝐬𝐭𝐫𝐚𝐭𝐢𝐨𝐧 𝐃𝐚𝐲】ʕ•ᴥ•ʔ",
+                    "",
+                    "———————————————",
+                    "𝗛𝗞𝗨 𝗥𝗲𝗴𝗶𝘀𝘁𝗿𝗮𝘁𝗶𝗼𝗻 𝗗𝗮𝘆 𝟮𝟬𝟮𝟭",
+                    "- 𝘼𝙧𝙩 𝘾𝙡𝙪𝙗 -",
                     "𝗗𝗮𝘁𝗲: 𝟭𝟱/𝟴 - 𝟭𝟳/𝟴",
                     "𝗩𝗲𝗻𝘂𝗲: 𝗨𝗻𝗶𝘃𝗲𝗿𝘀𝗶𝘁𝘆 𝗕𝗼𝗼𝗸𝘀𝘁𝗼𝗿𝗲",
+                    "𝗧𝗶𝗺𝗲: 𝟭𝟭𝗮𝗺 - 𝟴𝗽𝗺",
+                    "———————————————",
                     "",
-                    "一年一度嘅reg day又嚟喇！🌈🔥 Art Club 每年都會有welfare pack 🎁送返我哋members😝🤤 大家可以swipe去後面睇welfare products😙",
+                    "今日Jupas 放榜啦！！恭喜曬各位fm bb 入到HKU！！一齊成為港大人嘅一分子！٩(๑❛ᴗ❛๑)۶ ☺️☺️❤️🙆🏻‍♀️😘",
+                    "入到大學，除咗享受Ulife同埋讀書之外，可能你都會想join一啲cultural activities，所以…",
+                    "Tada~ 🤗🤗",
+                    "一年一度嘅Reg day就黎到喇！🌈🔥 諗好左要reg咩soc/club未呢( ˘͈ ᵕ ˘͈ )",
+                    "鍾意美術嘅你，梗係要黎reg Art Club member啦♥︎來年各種精彩嘅workshop一定啱味啱曬你 ♪~ Hmm.. 太多選擇未諗好？咁記得黎揾我地！等我地同你傾下偈，俾你了解多啲啦(ノ)`ω´(ヾ)😍🥰",
+                    "記住記住！我地喺Art Club booth等你 *ˊᵕˋ)੭ ~♥︎",
+                    "",
+                    "Art Club 每年都會有welfare pack 🎁送返我哋members😝🤤 大家可以swipe去後面睇welfare products😙",
                     "另外今年我地仲有幸得到唔同公司嘅贊助😋🤤🙆‍♀️想攞走呢個咁靚嘅welfare pack？",
                     "🤩🤤😍 記住嚟我哋個booth到 reg member 啊🙆‍♀️😎🥳 （🤫～到時仲有神秘禮物添😗😉）到時見！～ (´꒳`)",
                     "",
-                    "Registration day is coming! 🤩🌈 Every year, new members receive a welfare pack 🎁😍 Swipe to the next few pages to take a peek at the welfare products 😉 ",
+                    "❤️☺️ Congratulations to all HKU freshmen! When planning for your university life, apart from your studies, I’m sure you’ll also be interested in some more fun and creative activities…",
+                    "GOOD NEWS - Reg day is coming!!! Have you decided on which societies you want to register for ( ˘͈ ᵕ ˘͈ ) ? ",
+                    "If, like us, you are an art fanatic, look no further: you must come and join us by registering for Art Club membership! That way, you won’t miss any of our exciting upcoming workshops. ( ∗°⌓°∗ )♡",
+                    "Remember to stop by our booth on Reg Day — we look forward to meeting you soon! *ˊᵕˋ)੭ ~",
+                    "",
+                    "Every year, new members receive a welfare pack 🎁😍 Swipe to the next few pages to take a peek at the welfare products 😉 ",
                     "Also, a big thanks to the companies who have sponsored us! 😋🤩 Want a free welfare pack? ",
                     "Don't miss our booth and come register for Art Club membership! 🤤 (p.s. more secret goodies may just be waiting for you! 🤫) Hope to see you there~ 🙆‍♀️❤🧡💛💚💙💜",
                     "",
@@ -65,7 +84,7 @@
                 date: "August 4, 2021",
                 eventDate: "25 July",
                 imgDir: "0-iridescence",
-                banner: "group.jpg",
+                banner: "0-group.jpg",
                 //- poster: "poster.png"
                 content: [
                     "突發新聞",
