--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -24,19 +24,15 @@
 		        "children": [
 		            {
 		                "type": "file",
+		                "name": "directions.png"
+		            },
+		            {
+		                "type": "file",
 		                "name": "about-bg.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "brushes2.jpg"
-		            },
-		            {
-		                "type": "file",
 		                "name": "contact-bg.jpg"
-		            },
-		            {
-		                "type": "file",
-		                "name": "directions.png"
 		            },
 		            {
 		                "type": "file",
@@ -48,11 +44,7 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "index-bg.jpg"
-		            },
-		            {
-		                "type": "file",
-		                "name": "post-bg.jpg"
+		                "name": "brushes2.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -60,7 +52,15 @@
 		            },
 		            {
 		                "type": "file",
+		                "name": "index-bg.jpg"
+		            },
+		            {
+		                "type": "file",
 		                "name": "_events-bg.jpg"
+		            },
+		            {
+		                "type": "file",
+		                "name": "post-bg.jpg"
 		            }
 		        ]
 		    },
@@ -69,54 +69,44 @@
 		        "type": "folder",
 		        "children": [
 		            {
-		                "name": "1-art-jam-thursday",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "poster.png"
-		                    }
-		                ]
-		            },
-		            {
 		                "name": "0-iridescence",
 		                "type": "folder",
 		                "children": [
 		                    {
 		                        "type": "file",
-		                        "name": "Angie.png"
+		                        "name": "0-Angie.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Crystal.png"
+		                        "name": "0-Crystal.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "group.jpg"
+		                        "name": "0-Iris.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Iris.png"
+		                        "name": "0-group.jpg"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Miriam.png"
+		                        "name": "0-Ivan.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Nicholas.png"
+		                        "name": "0-Miriam.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Ivan.png"
+		                        "name": "0-Nicholas.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Summer.png"
+		                        "name": "0-Summer.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Victoria.png"
+		                        "name": "0-Victoria.png"
 		                    }
 		                ]
 		            },
@@ -126,19 +116,41 @@
 		                "children": [
 		                    {
 		                        "type": "file",
-		                        "name": "cover.jpeg"
+		                        "name": "2-1-cover.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "info1.jpeg"
+		                        "name": "2-2-poster.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "info2.jpeg"
+		                        "name": "2-3-cover2.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "info3.jpeg"
+		                        "name": "2-4-info1.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "2-5-info2.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "2-6-info3.jpeg"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "2-vid.gif"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "1-art-jam-thursday",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "1-poster.png"
 		                    }
 		                ]
 		            }
