--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -99,3 +99,160 @@
                 signupLink: 'https://forms.gle/H2TDBhJv6WUSXRmT7',
             },
         ]
+
+- 
+    var future_posts = [
+            {
+                eventDate: "Sep",
+                title: "Promotion Week I: The Shine Shine Monk",
+                subtitle: "Teru Teru Bozu Workshop",
+            },
+            {
+                eventDate: "Sep",
+                title: "Art Club Orientation Day",
+                subtitle: "The wizard of Art",
+            },
+            {
+                eventDate: "Sep",
+                title: "Light Up the Night",
+                subtitle: "Lantern Workshop",
+            },
+            {
+                eventDate: "Sep",
+                title: "Oil Painting 101",
+                subtitle: "Oil Painting Workshop",
+            },
+            {
+                eventDate: "Sep",
+                title: "Tea gathering I: Namaste!",
+                subtitle: "Henna Workshop",
+            },
+            {
+                eventDate: "Sep",
+                title: "Tea gathering II: Mini-Sculpture",
+                subtitle: "Individual Clay and Group Clay Miniature Workshops",
+            },
+
+            {
+                eventDate: "Oct",
+                title: "Pretty Bracelets, Pretty You!",
+                subtitle: "Beaded Bracelets DIY Making Workshop",
+            },
+            {
+                eventDate: "Oct",
+                title: "Free Art Buffet Special Edition | Fold What You Want",
+                subtitle: "Origami Workshop",
+            },
+            {
+                eventDate: "Oct",
+                title: "Open Your Book",
+                subtitle: "DIY Bookmark Workshop",
+            },
+            {
+                eventDate: "Oct",
+                title: "Acrylic Painting 101",
+                subtitle: "Acrylic Painting Workshop",
+            },
+            {
+                eventDate: "Nov",
+                title: "Let’s Make Earrings!", 
+                subtitle: "Shrinky Dink Earrings Workshop",
+            },
+            {
+                eventDate: "Nov",
+                title: "Glitter in the Darkness", 
+                subtitle: "Galaxy bottles making Workshop",
+            },
+            {
+                eventDate: "Nov",
+                title: "Neon Glow", 
+                subtitle: "Neon Light Workshop",
+            },
+            {
+                eventDate: "Nov",
+                title: "Flower Specimen", 
+                subtitle: "Herbarium Oil Workshop",
+            },
+            {
+                eventDate: "Nov",
+                title: "DIY your container, DIY your dream", 
+                subtitle: "Container DIY workshop",
+            },
+            {
+                eventDate: "Dec",
+                title: "A-project"
+            },
+            {
+                eventDate: "Dec",
+                title: "Free Art Buffet (Regular Edition)",
+            },
+            {
+                eventDate: "Dec",
+                title: 'Jingle "balls" rock', 
+                subtitle: "Christmas ornament hanging ball workshop",
+            },
+            {
+                eventDate: "Jan",
+                title: "Free Art Buffet Special Edition | Colorful Glass", 
+                subtitle: "Glass Painting Workshop",
+            },
+            {
+                eventDate: "Jan",
+                title: "Promotion Week II: Look! Rainbow is on your hand!", 
+                subtitle: "Rainbow loom bracelet workshop",
+            },
+            {
+                eventDate: "Jan",
+                title: "Colours rise!!!", 
+                subtitle: "Filter paper chromatography workshop",
+            },
+            {
+                eventDate: "Jan",
+                title: "Art Fair | Sparket",
+            },
+            {
+                eventDate: "Feb",
+                title: "Stamp on You",
+                subtitle: "Rubber stamp carving workshop"
+            },
+            {
+                eventDate: "Feb",
+                title: "Precious Moments",
+                subtitle: "Film Roll Album and Glass Painting Workshop"
+            },
+            {
+                eventDate: "Feb",
+                title: "Free Art Buffet Special Edition | Pull Out Your Masterpiece",
+                subtitle: "String Painting Workshop"
+            },
+            {
+                eventDate: "Feb",
+                title: "Outdoor Sketching Trip",
+                subtitle: "Tsim Sha Tsui: HK Museum of Art and Avenue of Stars"
+            },
+
+            {
+                eventDate: "Mar",
+                title: "Raconteur",
+                subtitle: "Paper Carving Lamp Workshop"
+            },
+            {
+                eventDate: "Mar",
+                title: "Annual General Meeting"
+            },
+            {
+                eventDate: "Mar",
+                title: "Keeping Flowers Alive",
+                subtitle: "Dry Flower Coaster"
+            },
+            {
+                eventDate: "Mar",
+                title: "A Whole Magical Pin", 
+                subtitle: "Shrinky Dink Pin Workshop"
+            },
+            {
+                eventDate: "Mar",
+                title: "DIY and Enjoy", 
+                subtitle: "Painting on t-shirt / cloth bag"
+            },
+        ]
