--- a/src/scss/sections/_events.scss
+++ b/src/scss/sections/_events.scss
@@ -26,6 +26,9 @@
 	z-index: -10;
 }
 
+.coming-soon {
+  color: gainsboro;
+}
 
 /* Container around content */
 
@@ -145,7 +148,7 @@
   /* Make sure all circles are at the same spot */
   .left::after,
   .right::after {
-    left: 15px;
+    left: 7px;
   }
   /* Make all right containers behave like the left ones */
   .right {
