updated Acrylic workshop title to still life sketching

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -150,8 +150,7 @@
             },
             {
                 eventDate: "Oct",
-                title: "Acrylic Painting 101",
-                subtitle: "Acrylic Painting Workshop",
+                title: "Still Life Sketching Workshop",
             },
             {
                 eventDate: "Nov",
