--- a/src/pug/gallery.pug
+++ b/src/pug/gallery.pug
@@ -45,14 +45,13 @@ html(lang='en')
 
                         each item in files
                             if item.name == "posts"
-                                each post in item.children.reverse()
+                                each post in item.children
                                     each file in post.children
                                         +getGalleryItem(item.name, post.name, file.name)
                     
                     script(src='js/gallery.js')
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-md-10.col-lg-8.col-xl-7
-                        p * Press F5 to reload page if you don't see any images :)
         include includes/footer.pug
 
         include includes/scripts.pug
