updated reg day gif and descriptions

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -45,8 +45,8 @@
                     "𝗛𝗞𝗨 𝗥𝗲𝗴𝗶𝘀𝘁𝗿𝗮𝘁𝗶𝗼𝗻 𝗗𝗮𝘆 𝟮𝟬𝟮𝟭",
                     "- 𝘼𝙧𝙩 𝘾𝙡𝙪𝙗 -",
                     "𝗗𝗮𝘁𝗲: 𝟭𝟱/𝟴 - 𝟭𝟳/𝟴",
-                    "𝗩𝗲𝗻𝘂𝗲: 𝗨𝗻𝗶𝘃𝗲𝗿𝘀𝗶𝘁𝘆 𝗕𝗼𝗼𝗸𝘀𝘁𝗼𝗿𝗲",
-                    "𝗧𝗶𝗺𝗲: 𝟭𝟭𝗮𝗺 - 𝟴𝗽𝗺",
+                    "𝗩𝗲𝗻𝘂𝗲: 𝗖𝗼𝗺𝗽𝗼𝘀𝗶𝘁𝗲 𝗕𝘂𝗶𝗹𝗱𝗶𝗻𝗴 𝟭/𝗙",
+                    "𝗧𝗶𝗺𝗲: 𝟵:𝟯𝟬𝗮𝗺 - 𝟲:𝟯𝟬𝗽𝗺",
                     "———————————————",
                     "",
                     "今日Jupas 放榜啦！！恭喜曬各位fm bb 入到HKU！！一齊成為港大人嘅一分子！٩(๑❛ᴗ❛๑)۶ ☺️☺️❤️🙆🏻‍♀️😘",
