--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -2,6 +2,10 @@
 	var files = [
 		    {
 		        "type": "file",
+		        "name": ".DS_Store"
+		    },
+		    {
+		        "type": "file",
 		        "name": "favicon.ico"
 		    },
 		    {
@@ -14,11 +18,11 @@
 		        "children": [
 		            {
 		                "type": "file",
-		                "name": "about-bg.jpg"
+		                "name": "_events-bg.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "directions.png"
+		                "name": "about-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -30,6 +34,14 @@
 		            },
 		            {
 		                "type": "file",
+		                "name": "directions.png"
+		            },
+		            {
+		                "type": "file",
+		                "name": "events-bg.jpg"
+		            },
+		            {
+		                "type": "file",
 		                "name": "gallery-bg.jpg"
 		            },
 		            {
@@ -38,19 +50,11 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "events-bg.jpg"
-		            },
-		            {
-		                "type": "file",
-		                "name": "regday-group.jpg"
-		            },
-		            {
-		                "type": "file",
 		                "name": "post-bg.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "_events-bg.jpg"
+		                "name": "regday-group.jpg"
 		            }
 		        ]
 		    },
@@ -69,14 +73,8 @@
 		        "type": "folder",
 		        "children": [
 		            {
-		                "name": "1-art-jam-thursday",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "1-poster.png"
-		                    }
-		                ]
+		                "type": "file",
+		                "name": ".DS_Store"
 		            },
 		            {
 		                "name": "0-iridescence",
@@ -89,10 +87,6 @@
 		                    {
 		                        "type": "file",
 		                        "name": "0-Crystal.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "0-group.jpg"
 		                    },
 		                    {
 		                        "type": "file",
@@ -117,6 +111,20 @@
 		                    {
 		                        "type": "file",
 		                        "name": "0-Victoria.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "0-group.jpg"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "1-art-jam-thursday",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "1-poster.png"
 		                    }
 		                ]
 		            },
@@ -138,11 +146,11 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-5-info2.jpeg"
+		                        "name": "2-4-info1.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "2-4-info1.jpeg"
+		                        "name": "2-5-info2.jpeg"
 		                    },
 		                    {
 		                        "type": "file",
@@ -151,6 +159,16 @@
 		                    {
 		                        "type": "file",
 		                        "name": "2-vid.gif"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "3-oday",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "oday-poster.jpeg"
 		                    }
 		                ]
 		            }
