--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -1,6 +1,53 @@
 - 
     var posts = [
             {
+                link: "post-oday",
+                subtitle: "𝙒𝙚’𝙧𝙚 𝙤𝙛𝙛 𝙩𝙤 𝙨𝙚𝙚 𝙩𝙝𝙚 𝙒𝙞𝙯𝙖𝙧𝙙, 𝙩𝙝𝙚 𝙬𝙤𝙣𝙙𝙚𝙧𝙛𝙪𝙡 𝙒𝙞𝙯𝙖𝙧𝙙 𝙤𝙛 𝙊𝙯.",
+                title: "Orientation Day",
+                date: "August 14, 2021",
+                eventDate: "25 Sep",
+                imgDir: "3-oday",
+                poster: "oday-poster.jpeg",
+                content: [
+                    "Art Club Oday除左有精心設計嘅遊戲俾大家互相熟悉下之外",
+                    "不得不提嘅梗係Orientation Workshop啦！୧꒰´꒳`꒱૭✧",
+                    "",
+                    "🌟𝗕𝗿𝗮𝗰𝗲𝗹𝗲𝘁 𝗠𝗮𝗸𝗶𝗻𝗴 𝗪𝗼𝗿𝗸𝘀𝗵𝗼𝗽",
+                    "今年我地會同你哋一齊編織手繩，仲會各有各嘅唔同顏色同裝飾。至於啲顏色有咩用..？等你哋黎join完oday咪知囉~ (ノ)`ω´(ヾ)",
+                    "",
+                    "🌟𝗦𝗰𝗵𝗲𝗱𝘂𝗹𝗲 𝗕𝗼𝗼𝗸 𝗗𝗲𝘀𝗶𝗴𝗻 𝗪𝗼𝗿𝗸𝘀𝗵𝗼𝗽",
+                    "開sem就梗係唔少得schedule book啦( ∗°⌓°∗ )♡ 親手整完屬於自己獨一無二嘅靚靚schedule book，帶翻屋企即刻可以用！係時候mark低你哋嘅timetable，check定幾時得閒join我哋黎緊一系列嘅workshops喇！«٩(´ ꒳ `)۶»",
+                    "",
+                    "今年Oday就跟住我哋，一齊去尋找Wizard of Oz！",
+                    "",
+                    "————————————",
+                    "𝗔𝗿𝘁 𝗖𝗹𝘂𝗯 𝗢𝗿𝗶𝗲𝗻𝘁𝗮𝘁𝗶𝗼𝗻 𝗗𝗮𝘆 𝟮𝟬𝟮𝟭",
+                    "-𝙏𝙝𝙚 𝙒𝙞𝙯𝙖𝙧𝙙 𝙤𝙛 𝘼𝙧𝙩 -",
+                    "𝗗𝗮𝘁𝗲: 𝟮𝟱/𝟵",
+                    "𝗩𝗲𝗻𝘂𝗲: 𝗔𝗿𝘁 𝗦𝘁𝘂𝗱𝗶𝗼, 𝗛𝗞𝗨",
+                    "𝗙𝗲𝗲: $𝟴𝟬 (𝗠𝗲𝗺𝗯𝗲𝗿) | $𝟭𝟮𝟬 (𝗡𝗼𝗻-𝗺𝗲𝗺𝗯𝗲𝗿)",
+                    "𝗘𝗮𝗿𝗹𝘆 𝗯𝗶𝗿𝗱 𝗱𝗶𝘀𝗰𝗼𝘂𝗻𝘁 (𝗠𝗲𝗺𝗯𝗲𝗿 𝗼𝗻𝗹𝘆): $𝟲𝟬*",
+                    "*𝐸𝑎𝑟𝑙𝑦 𝑏𝑖𝑟𝑑 𝑑𝑖𝑠𝑐𝑜𝑢𝑛𝑡 𝑡𝑖𝑙 𝟷𝟷/𝟿",
+                    "",
+                    "If you are interested or have any inquiries, please feel free to contact us through WhatsApp, IG, or email.",
+                    "Angie Xiang: 9637 6601",
+                    "Miriam Wang: 4640 6716",
+                    "IG: @artclub_hkusu",
+                    "📧: artclubhkusu@gmail.com",
+                    "————————————",
+                    "",
+                    "Apart from designated check point games and icebreakers for you to get to know each other and make new friends, this year, Art Club Oday offers many fun and unique workshops! ୧꒰´꒳`꒱૭✧",
+                    "",
+                    "🌟𝗕𝗿𝗮𝗰𝗲𝗹𝗲𝘁 𝗠𝗮𝗸𝗶𝗻𝗴 𝗪𝗼𝗿𝗸𝘀𝗵𝗼𝗽",
+                    "We will make bracelets together! You can choose from many different colours and designs. As for having lots of different colours? Come and join us to find out the special reason why (ノ)`ω´(ヾ)",
+                    "",
+                    "🌟𝗦𝗰𝗵𝗲𝗱𝘂𝗹𝗲 𝗕𝗼𝗼𝗸 𝗗𝗲𝘀𝗶𝗴𝗻 𝗪𝗼𝗿𝗸𝘀𝗵𝗼𝗽",
+                    "For a new start to the semester and the academic year, a schedule book is a must-have item to keep you organised. Design and customise your own unique and special schedule book with us! ( ∗°⌓°∗ )♡ Afterwards, take it home use it immediately: remember to mark your calendar and check if you are free to join our upcoming workshops! «٩(´ ꒳ `)۶»",
+                    "",
+                    "~ 𝙁𝙤𝙡𝙡𝙤𝙬 𝙪𝙨 𝙩𝙤 𝙛𝙞𝙣𝙙 𝙩𝙝𝙚 𝙒𝙞𝙯𝙖𝙧𝙙 𝙤𝙛 𝙊𝙯 𝙖𝙩 𝙩𝙝𝙞𝙨 𝙮𝙚𝙖𝙧’𝙨 𝙊𝙧𝙞𝙚𝙣𝙩𝙖𝙩𝙞𝙤𝙣 𝘿𝙖𝙮 !",
+                ],
+            },
+            {
                 link: "post-art-jam-thursday",
                 subtitle: "Join us every Thursday at Art Studio at Art Jam Thursday",
                 title: "Art Jam Thursday",
