--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -154,11 +154,11 @@
                 title: "Promotion Week I: The Shine Shine Monk",
                 subtitle: "Teru Teru Bozu Workshop",
             },
-            {
-                eventDate: "Sep",
-                title: "Art Club Orientation Day",
-                subtitle: "The wizard of Art",
-            },
+            //- {
+            //-     eventDate: "Sep",
+            //-     title: "Art Club Orientation Day",
+            //-     subtitle: "The wizard of Art",
+            //- },
             {
                 eventDate: "Sep",
                 title: "Light Up the Night",
